JSON-Schema-Modern-0.616
          - documentation notes added for which definitions can be overridden
            (formats, media-types and encodings can; vocabularies cannot).
          - "validate" in JSON::Schema::Modern::Document must now be provided
            with a JSON::Schema::Modern object if a custom metaschema is used
            by the schema (this is a forward-looking change in preparation for
            removing the "evaluator" attribute from the JSMD object in a
            subsequent release).

--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema using a JSON Schema
 
 =head1 VERSION
 
-version 0.615
+version 0.616
 
 =head1 SYNOPSIS
 
@@ -461,6 +461,8 @@ do not apply arithmetic operators to it -- or subsequent type checks on this val
 See L<https://spec.openapis.org/registry/format/> for a registry of known and useful formats; for
 compatibility reasons, avoid defining a format listed here with different semantics.
 
+Format definitions can be overridden with a new call to C<add_format_validation>.
+
 =head2 add_vocabulary
 
   $js->add_vocabulary('My::Custom::Vocabulary::Class');
@@ -474,6 +476,8 @@ L<vocabulary|JSON::Schema::Modern::Vocabulary/vocabulary> and
 L<keywords|JSON::Schema::Modern::Vocabulary/keywords> methods, as well as
 C<< _traverse_keyword_<keyword name> >> methods for each keyword. C<< _eval_keyword_<keyword name> >>
 methods are optional; when not provided, evaluation will always return a true result.
+
+Vocabularies cannot be redefined; subsequent calls to add the same vocabulary will do nothing.
 
 =head2 add_media_type
 
@@ -520,6 +524,8 @@ C<text/*> - passes strings through unchanged
 
 =back
 
+Media-type definitions can be overridden with a new call to C<add_media_type>.
+
 =head2 get_media_type
 
 Fetches a decoder sub for the indicated media type. Lookups are performed B<without case sensitivity>.
@@ -541,6 +547,8 @@ You can use it thusly:
 Takes an encoding name and a subref which takes a single scalar reference, which is expected to be
 a reference to a string, which SHOULD be a 7-bit or 8-bit string. Result values MUST be a scalar-reference
 to a string (which is then dereferenced for the C<contentMediaType> keyword).
+
+Encoding definitions can be overridden with a new call to C<add_encoding>.
 
 =for stopwords natively
 
@@ -800,6 +808,34 @@ UNTRUSTED SOURCES.>
 (In particular, see vulnerability
 L<perl5363delta/CVE-2023-47038-Write-past-buffer-end-via-illegal-user-defined-Unicode-property>,
 which was fixed in Perl releases 5.34.3, 5.36.3 and 5.38.1.)
+
+=head1 BUNDLED META-SCHEMAS
+
+These specification meta-schemas are bundled with this distribution and loaded as needed:
+
+=over 4
+
+=item *
+
+C<http://json-schema.org/draft-04/schema#>
+
+=item *
+
+C<http://json-schema.org/draft-06/schema#>
+
+=item *
+
+C<http://json-schema.org/draft-07/schema#>
+
+=item *
+
+C<https://json-schema.org/draft/2019-09/schema>
+
+=item *
+
+C<https://json-schema.org/draft/2020-12/schema>
+
+=back
 
 =head1 SEE ALSO
 
