increment $VERSION after 0.617 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.617     2025-08-16 20:50:11Z
           - various internal changes for performance improvement
 
