--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - internal changes only (breaking changes for dependencies like
+            OpenAPI::Modern)
 
 0.618     2025-09-07 20:27:21Z
           - the json-schema-eval executable now also handles YAML-encoded
