--- a/Changes
+++ b/Changes
@@ -396,7 +396,7 @@ Revision history for JSON-Schema-Modern
 0.543     2022-02-11 04:11:55Z
           - now allowing runtime overriding of the "strict" configuration
           - add "effective_base_uri", for adjusting the locations of errors
-            and annotations against a dynamic base
+            and annotations against a dynamic base (removed in version 0.620)
 
 0.542     2022-01-23 08:17:08Z
           - new "strict" option (and --strict flag to json-schema-eval), for
