JSON-Schema-Modern-0.620
          - new "clone" method for Error objects
          - work around an issue with using an object overload as a constant
            on perl 5.20

--- a/README.pod
+++ b/README.pod
@@ -2,7 +2,7 @@
 
 =encoding UTF-8
 
-=for stopwords schema subschema metaschema validator evaluator listref
+=for stopwords schema subschema metaschema validator evaluator
 
 =head1 NAME
 
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema using a JSON Schema
 
 =head1 VERSION
 
-version 0.619
+version 0.620
 
 =head1 SYNOPSIS
 
@@ -266,10 +266,6 @@ C<traversed_keyword_path>: adjusts the accumulated path as of the start of evalu
 
 C<initial_schema_uri>: adjusts the recorded absolute keyword location of the start of evaluation
 
-=item *
-
-C<effective_base_uri>: locations in errors and annotations are resolved against this URI (only useful when providing an inline schema that does not declare an absolute base URI for itself)
-
 =back
 
 The return value is a L<JSON::Schema::Modern::Result> object, which can also be used as a boolean.
@@ -315,10 +311,6 @@ C<data_path>: adjusts the effective path of the data instance as of the start of
 =item *
 
 C<traversed_keyword_path>: adjusts the accumulated path as of the start of evaluation (or last C<$id> or C<$ref>)
-
-=item *
-
-C<effective_base_uri>: locations in errors and annotations are resolved against this URI (only useful when providing an inline schema that does not declare an absolute base URI for itself)
 
 =back
 
@@ -458,7 +450,10 @@ the data type(s) supported by that format may not be changed.
 Be careful to not mutate the type of the value while checking it -- for example, if it is a string,
 do not apply arithmetic operators to it -- or subsequent type checks on this value may fail.
 
-See L<https://spec.openapis.org/registry/format/> for a registry of known and useful formats; for
+=for stopwords OpenAPI
+
+See the official L<OpenAPI Format Registry|https://spec.openapis.org/registry/format>
+for a registry of known and useful formats; for
 compatibility reasons, avoid defining a format listed here with different semantics.
 
 Format definitions cannot be overridden with a new definition.
@@ -525,6 +520,10 @@ C<text/*> - passes strings through unchanged
 =back
 
 Media-type definitions can be overridden with a new call to C<add_media_type>.
+
+See the official L<OpenAPI Media Type Registry|https://spec.openapis.org/registry/media-type>
+for a registry of known and useful media types; for
+compatibility reasons, avoid defining a media type listed here with different semantics.
 
 =head2 get_media_type
 
@@ -910,12 +909,28 @@ L<Mojolicious::Plugin::OpenAPI::Modern>: a Mojolicious plugin providing OpenAPI 
 
 L<Test::Mojo::Role::OpenAPI::Modern>: test your Mojolicious application's OpenAPI compliance
 
+=item *
+
+L<https://spec.openapis.org/registry/format>
+
+=item *
+
+L<https://spec.openapis.org/registry/media-type>
+
 =back
 
 =head1 AVAILABILITY
 
 This distribution and executable is available on modern Debian versions (via C<apt-get>) as the
 C<libjson-schema-modern-perl> package.
+
+=head1 GIVING THANKS
+
+=for stopwords MetaCPAN GitHub
+
+If you found this module to be useful, please show your appreciation by
+adding a +1 in L<MetaCPAN|https://metacpan.org/dist/JSON-Schema-Modern>
+and a star in L<GitHub|https://github.com/karenetheridge/JSON-Schema-Modern>.
 
 =head1 SUPPORT
 
