--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.621     2025-10-30 17:56:52Z
           - adjust acceptance tests to handle new failure cases in the test
             suite for hostname, idn-hostname formats
