--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - fix error when navigating a $dynamicRef after initial evaluation
+            at a subschema
 
 0.622     2025-11-08 22:22:19Z
           - allow export of JSON::Schema::Modern::Utilities::is_bool
