--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.623     2025-11-17 00:14:31Z
           - fix error when navigating a $dynamicRef after initial evaluation
             at a subschema
