JSON-Schema-Modern-0.625
          - introduce a global schema document cache that can be used by other
            distributions (such as OpenAPI::Modern)

--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema using a JSON Schema
 
 =head1 VERSION
 
-version 0.624
+version 0.625
 
 =head1 SYNOPSIS
 
@@ -218,7 +218,7 @@ Defaults to false.
 =head1 METHODS
 
 =for Pod::Coverage BUILDARGS FREEZE THAW
-CACHED_METASCHEMAS METASCHEMA_URIS SPECIFICATION_VERSIONS_SUPPORTED SPECIFICATION_VERSION_DEFAULT
+METASCHEMA_URIS SPECIFICATION_VERSIONS_SUPPORTED SPECIFICATION_VERSION_DEFAULT
 
 =head2 evaluate_json_string
 
