--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.625     2025-11-28 22:34:54Z
           - introduce a global schema document cache that can be used by other
             distributions (such as OpenAPI::Modern)
