--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - "json-schema-eval" script can now accept multiple --data options,
+            or multiple --validate-schema options
 
 0.628     2025-12-07 06:50:22Z
           - "strict" mode now ignores keywords starting with "x-".
