--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.626     2025-12-02 00:29:17Z
           - now correctly disallowing booleans in draft4 subschemas
 
