increment $VERSION after 0.627 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.627     2025-12-04 21:10:22Z
           - improved efficiency of "short_circuit" mode, disabling it
             in fewer and more tightly constrained conditions while allowing
