do not include a meaningless instanceLocation in errors arising from a bad traverse

--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
           - "strict" mode now ignores keywords starting with "x-".
+          - drop the use of an empty "instanceLocation" in errors resulting
+            from the parsing of a schema
 
 0.627     2025-12-04 21:10:22Z
           - improved efficiency of "short_circuit" mode, disabling it
